tests/snapshots/assets__check_file@unit-markup-raw-backtick.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/markup/raw-backtick.typ
snapshot_kind: text
---
#(
  ``` ` ```,
)
#(
  ```js ` ```
)
#(
  ```js `code` ```
)
#(
  ```md `code`+other`code` ```
)
