tests/snapshots/assets__check_file@unit-markup-raw-backtick.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/raw-backtick.typ
---
#(``` ` ```,)
#(```js ` ```)
#(```js `code` ```)
#(```md `code`+other`code` ```)
