tests/snapshots/assets__check_file@unit-markup-raw-in-funccall.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/raw-in-funccall.typ
---
#block(
  box(`
    f(x) &= pause x^2 + 2x + 1  \
         &= pause (x + 1)^2  \
  `),
)

#block(
  box(`   
      f(x) &= pause x^2 + 2x + 1  \
             &= pause (x + 1)^2  \
      `),
)
