tests/snapshots/assets__check_file@unit-markup-raw.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/raw.typ
---
```rs
let a = 1;
```

```rs
  let a = 1;
```

#[
  ```rs
  let a = 1;
  ```
]

#{
  ```rs
  let a = 1;
  ```
}

#{
  ```rs
  let a = 1;
  let b = 1;
  
  
  let c = 1;
  
  
  
  let d = 1;
  ```
}

#[
  ```rs
  let a = 1;
  let b = 1;
  
  
  let c = 1;
  
  
  
  let d = 1;
  ```
]
