tests/snapshots/assets__check_file@unit-markup-strong.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/strong.typ
snapshot_kind: text
---
This is *strong.* \
This is #strong[too.] \

#show strong: set text(
  red,
)
And this is *evermore.*
