tests/snapshots/assets__check_file@unit-markup-term-multiline.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/markup/term-multiline.typ
snapshot_kind: text
---
/ Lorem ipsum dolor sit amet: consectetur adipiscing elit

/ Lorem ipsum dolor sit amet: consectetur adipiscing elit

/ Lorem ipsum dolor sit amet:
consectetur adipiscing elit

/ sed do eiusmod tempor incididunt: ut labore et dolore magna aliqua.

/ sed do eiusmod tempor incididunt: ut labore:et do:lore magna ali:qua.
